fix(body): ensure body height covers entire page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 :host {
-  height: 100%;
-  display: block;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
