--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,9 @@ html {
 body {
     background-color: var(--color-bg);
     color: var(--color-fg);
-    height: 100dvh;
+    min-height: 100dvh;
+    display: flex;
+    flex-direction: column;
 }
 
 
